--- a/src/main/resources/templates/editAttraction.html
+++ b/src/main/resources/templates/editAttraction.html
@@ -34,12 +34,12 @@
 <main>
     <form th:action="@{/attractions/update}" method="post" class="edit-form">
         <label for="name">Navn:</label>
-        <input id="name"  class="form-input" name="name" th:value="${attraction.name}">
+        <input id="name"  class="form-input" name="name" th:value="${attraction.getName()}">
 
         <label for="city">By:</label>
         <select id="city" name="city" class="form-input">
             <option th:each="city : ${cities}" th:value="${city}" th:text="${city.getCityName()}"
-                    th:selected="${city == attraction.city}"></option>
+                    th:selected="${city.getCityId() == attraction.getCity().getCityId()}"></option>
         </select>
 
         <label for="tags">Kategorier:</label>
